# middleware4rfid

./: ProjectHome.md  rfid.cfg
TDT/: Makefile.in  configure.scan  soapC.c  tdt.h
TDT/autom4te.cache/: output.0  requests  traces.0  traces.1
TDT/common/: CompactionMethodList.xsd  LevelTypeList.xsd  Makefile.am  Makefile.in  ModeList.xsd  configure  configure.ac  configure.scan
TDT/common/autom4te.cache/: output.1  traces.0  traces.1
TDT/src/: Makefile.am  Makefile.in  TDT.ice  TdtServantI.cpp  TdtServantI.h  configure  server.cpp  test.cpp
TDT/src/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
TDT/test/: Makefile.am  Makefile.in  test.c
TDT_CPP/: Makefile.am  Makefile.in  configure.ac  soapC.c  soapH.h  table.cpp  tdt.cpp  tdt_nsmap.cpp
TDT_CPP/autom4te.cache/: traces.1
TDT_CPP/test/: Makefile.am  Makefile.in  test.cpp
trunk/TDT/: EpcTagDataTranslation.h  Makefile.am  configure  soapH.h  soapStub.h  tdt.c
trunk/TDT/autom4te.cache/: output.1  requests
trunk/TDT/common/: GIAI-202.xml  InputFormatList.xsd  Makefile.am  Makefile.in  PadDirectionList.xsd  configure  configure.ac  configure.scan
trunk/TDT/common/autom4te.cache/: output.0  requests  traces.0
trunk/TDT/src/: TdtServantI.cpp  TdtServantI.h  config.h.in  configure  configure.ac  configure.scan  run  server.cpp  test.cpp
trunk/TDT/test/: test.c
trunk/TDT_CPP/: EpcTagDataTranslation.h  Makefile.am  Makefile.in  configure.scan  soapC.cpp  soapStub.h  tdt.h
trunk/TDT_CPP/autom4te.cache/: requests  traces.0
trunk/TDT_CPP/test/: Makefile.in
trunk/utils/: README
utils/: README
